# wedding-favor-3d-name

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 3d_text_generation_guide.md  project_description.md
resources/: name_list.txt  name_list_full.txt
resources/clip_bases/: clip_base_40.stl  clip_base_60.stl  clip_base_80.stl
src/: main.py  main_old.py  utilities.py
